# 1bit.cashier

./: .gitignore  Cargo.toml  README.md
apps/cashier-pos/: Cargo.toml
apps/cashier-pos/src/: main.rs
crates/cashier-audio/: Cargo.toml
crates/cashier-audio/src/: lib.rs
crates/cashier-audit/: Cargo.toml
crates/cashier-audit/src/: lib.rs
crates/cashier-bus/: Cargo.toml
crates/cashier-bus/src/: bus.rs  error.rs  events.rs  language.rs  lib.rs  memory.rs
crates/cashier-bus/tests/: memory_bus.rs
crates/cashier-order/: Cargo.toml
crates/cashier-order/src/: cart.rs  engine.rs  error.rs  lib.rs  state.rs
crates/cashier-order/tests/: engine.rs
crates/cashier-recycler/: Cargo.toml
crates/cashier-recycler/src/: lib.rs
crates/cashier-vision/: Cargo.toml
crates/cashier-vision/src/: lib.rs
docs/: ARCHITECTURE.md  DEPLOY.md  HARDWARE.md  ROADMAP.md
docs/plans/: 2026-05-13-v0.1.0-bench.md
docs/specs/: 2026-05-13-1bit-cashier-design.md
docs/superpowers/specs/: 2026-05-13-1bit-cashier-design.md
example/catalog/: products.json
