[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/1bit-systems/1bit.cashier"
rust-version = "1.85"
authors = ["1bit.cashier contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Crate skeletons are added per the design spec at
# docs/superpowers/specs/2026-05-13-1bit-cashier-design.md
# during the v0.1.0-bench milestone.
